--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: CapRover App Deploy
-        uses: floms/action-caprover@v1
+      - name: CapRover Deploy
+        uses: AlexxNB/caprover-action@v1
         with:
-          host: 'https://captain.main01.abmgrt.dev'
+          server: 'https://captain.main01.abmgrt.dev'
           password: '${{ secrets.CAPROVER_PASSWORD }}'
-          app: 'spicaring'
+          appname: 'spicaring'
           branch: main
