--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install CapRover CLI
-        working-directory: /
+        working-directory: ./
         run: |
-          npm install -g caprover
+          npm install caprover
           caprover deploy -h 'https://captain.main01.abmgrt.dev' -p ${{ secrets.CAPROVER_PASSWORD }} -b main -a spicaring 
      #   uses: AlexxNB/caprover-action@v1
     #    with:
